fixed alignment of players

--- a/src/components/CurrentUser.scss
+++ b/src/components/CurrentUser.scss
@@ -4,10 +4,11 @@
 
 .TeamSelection__heading {
   text-align: center;
+  margin-top: 20px;
 }
 
 .team-panel {
-  margin: 10px 0px 0px 45px
+  margin: 10px 0 0 5px;
 }
 
 .sign-out-button {
