--- a/src/components/PositionNumber.scss
+++ b/src/components/PositionNumber.scss
@@ -1,3 +1,7 @@
 .PositionNumber {
   margin-top: 10px;
 }
+
+.position-wrapper {
+  width: 25px;
+}
